--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
-bin
-build
-dist
-lib
-parts
-
 *.dll
 *.pyc
 *.pyo
 *.so
 *.egg-info
+.installed.cfg
+bin/
+build/
+develop-eggs/
+eggs/
+dist/
+lib/
+parts/
